5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1724_2519.log
== TEST (2019-05-14 10:05:49) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	hs -= qd
	i++
print(i)
	
-- ERROR:
File "XXXX", line 9
    i++
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:00) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	hs -= qd
	++i
print(i)
	
-- ERROR:
File "XXXX", line 9
    i++
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:15) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	hs -= qd
	i += 1
print(i)
	
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:38) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	hs -= qd
	i += 1
print(i)
	
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:45) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<=ht:
	hs += qs
	hs -= qd
	i += 1
print(i)
	
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:06:55) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	hs -= qd
	i += 1
print(i)
	
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:00) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	if hs<ht:
		hs -= qd
	i += 1
print(i)
	
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:08:09) 
-- CODE:
ht = int(input())
qs = int(input())
qd = int(input())
hs = i = 0

while hs<ht:
	hs += qs
	if hs<ht:
		hs -= qd
	i += 1
print(i)
	
-- EXECUTION TIME:
0.129178
-- TEST CASE 1:
---- input:
15
2
1
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
15
3
1
---- correct output:
7
---- user output:
7
-- TEST CASE 3:
---- input:
66
56
23

---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
